# drf-todo-app

./: README.md  db.sqlite3  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_todoitem_created.py
drf_todo_app/: asgi.py  settings.py  urls.py  wsgi.py
